# lit-gamepad

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bundle-action.lua  gamepad.h  init.lua  make.bat  package.lua
OSX-x64/: libgamepad.dylib
gamepad-sample/: main.lua  package.lua
gamepad/source/gamepad/: Gamepad.h  Gamepad_private.c  Gamepad_windows_dinput.c
